exports[`test should handle changeListMode action 1`] = `
Array [
  Object {
    "mode": "card",
    "type": "CHANGE_LIST_MODE",
  },
]
`;

exports[`test should handle deleteContact action 1`] = `
Array [
  Object {
    "id": "-1",
    "type": "DELETE_CONTACT",
  },
]
`;

exports[`test should handle loadingContactList action 1`] = `
Array [
  Object {
    "type": "LOADING_CONTACT_LIST",
  },
]
`;

exports[`test should handle recieveContactList action 1`] = `
Array [
  Object {
    "contacts": Array [],
    "type": "INITIALIZE_CONTACT_LIST",
  },
]
`;

exports[`test should handle requestContactList action 1`] = `
Array [
  Object {
    "type": "REQUEST_CONTACT_LIST",
  },
]
`;
